# maimai-ai-chart

./: .gitignore  README.md  pyproject.toml
.ai/: branch_policy.json  data_policy.json  model_policy.json  repository_policy.json
_archive/2026-07-cleanup-stage1/: README.md  archive_checksums.txt  archive_manifest.csv  archive_manifest.json
docs/: alignment_report.md  audio_features.md  data_preprocessing.md  dataset_manifest.md  duration_model.md  event_ir.md  frame_labels.md  ir_schema.md  model_phase26_quick_report.md  regression_samples.md  rhythm_skeleton.md  slide_model.md  unknown_difficulty_report.md
reports/repository_health/: example.json
scripts/: v1_regression.py
src/maichart/: __init__.py  alignment.py  audio.py  builder.py  cli.py  dataset.py  duration.py  event_ir.py  event_ir_converter.py  event_labels.py  exporter.py  ir.py  labels.py  maidata.py  notes.py  rhythm.py  (+6 more)
tests/: test_alignment.py  test_audio.py  test_dataset.py  test_duration_parser.py  test_event_ir.py  test_event_labels.py  test_ir.py  test_labels.py  test_maidata_parser.py  test_notes_parser.py  test_parser_robustness.py  test_pattern_labels.py  test_preprocess.py  test_repo_health.py  test_rhythm.py  test_small_batch_manifest.py  test_stage3_roundtrip.py  test_timing_tokenizer.py  test_touch_samples.py  test_training_v25.py  test_training_v25_smoke.py  test_visualize_run.py
tools/: analyze_pattern_labels.py  build_event_frame_labels_cache.py  check_data_health.py  check_experiment_health.py  check_git_health.py  compare_event_labels.py  repo_health_check.py  visualize_run.py
(+15 files in other folders)
